--- a/DungeonCrawler.Domain/DungeonCrawler.Domain.csproj
+++ b/DungeonCrawler.Domain/DungeonCrawler.Domain.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DungeonCrawler.Data\DungeonCrawler.Data.csproj" />
+  </ItemGroup>
+
 </Project>
