--- a/DungeonCrawler.Presentation/DungeonCrawler.Presentation/DungeonCrawler.Presentation.csproj
+++ b/DungeonCrawler.Presentation/DungeonCrawler.Presentation/DungeonCrawler.Presentation.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\DungeonCrawler.Domain\DungeonCrawler.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
